force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <label>見積</label>
    <nameField>
        <displayFormat>Q-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>見積コード</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>