force-app/main/default/objects/Quote__c/fields/afterDiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>afterDiscountTotal__c</fullName>
    <formula>SubTotal_Customer__c  - DiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引き後合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>