force-app/main/default/objects/Quote__c/fields/AgencyProvisionPriceSum__c.field-meta.xml
<CustomField>
    <fullName>AgencyProvisionPriceSum__c</fullName>
    <label>代理店提供価格総合計</label>
    <summarizedField>Device__c.AgencyProvisionPriceSumFormula__c</summarizedField>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>