force-app/main/default/objects/Quote__c/fields/Building_System_EP__c.field-meta.xml
<CustomField>
    <fullName>Building_System_EP__c</fullName>
    <label>ビルシEP</label>
    <summarizedField>Device__c.ClientAnswerAmountTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.NETCalculateCategory__c</field>
        <operation>equals</operation>
        <value>ビルシ</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>