force-app/main/default/objects/Quote__c/fields/Building_System_NET_LastAcc__c.field-meta.xml
<CustomField>
    <fullName>Building_System_NET_LastAcc__c</fullName>
    <label>ビルシNET（最終顧客）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>