force-app/main/default/objects/Quote__c/fields/Building_System_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>Building_System_NET_Sub__c</fullName>
    <label>ビルシNET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>