force-app/main/default/objects/Quote__c/fields/Building_System_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>Building_System_NETRate_Sub__c</fullName>
    <label>ビルシNET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>