force-app/main/default/objects/Quote__c/fields/ConstructionZoneDisplay__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZoneDisplay__c</fullName>
    <inlineHelpText>「なし」を選択すると帳票出力時に集計表(客先提出用)の工事区分を非表示にします</inlineHelpText>
    <label>帳票の工事区分表示有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
                <default>true</default>
                <label>表示あり</label>
            </value>
            <value>
                <fullName>なし</fullName>
                <label>表示なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>