force-app/main/default/objects/Quote__c/fields/DiscountName__c.field-meta.xml
<CustomField>
    <fullName>DiscountName__c</fullName>
    <defaultValue>&quot;値引き&quot;</defaultValue>
    <label>値引き名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>