force-app/main/default/objects/Quote__c/fields/DiscountReason__c.field-meta.xml
<CustomField>
    <fullName>DiscountReason__c</fullName>
    <label>値引き根拠</label>
    <length>255</length>
    <type>Text</type>
</CustomField>