force-app/main/default/objects/Quote__c/fields/EquipManageCost__c.field-meta.xml
<CustomField>
    <fullName>EquipManageCost__c</fullName>
    <label>機器管理費(見積項目自動計算)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>