force-app/main/default/objects/Quote__c/fields/EquipManageCost_formula__c.field-meta.xml
<CustomField>
    <fullName>EquipManageCost_formula__c</fullName>
    <formula>IF(ISPICKVAL(SectionExistence__c , &quot;あり&quot;), EquipManageCost_Rollup__c, IF(ISBLANK( MachineControlAmount_free__c ), EquipManageCost__c , MachineControlAmount_free__c ))</formula>
    <label>機器管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>