force-app/main/default/objects/Quote__c/fields/EquipManageCost_Rollup__c.field-meta.xml
<CustomField>
    <fullName>EquipManageCost_Rollup__c</fullName>
    <label>機器管理費</label>
    <summarizedField>ConstructionZone__c.MachineControlAmount_formula__c</summarizedField>
    <summaryForeignKey>ConstructionZone__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>