force-app/main/default/objects/Quote__c/fields/EquipManageCostRate__c.field-meta.xml
<CustomField>
    <fullName>EquipManageCostRate__c</fullName>
    <label>機器管理費率</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>