force-app/main/default/objects/Quote__c/fields/EquipmentCostExistence__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCostExistence__c</fullName>
    <inlineHelpText>機器管理費有無で「あり」を選択した場合は工区有無も選択してください。</inlineHelpText>
    <label>国土交通省機器管理費有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
                <default>true</default>
                <label>機器管理費なし</label>
            </value>
            <value>
                <fullName>あり</fullName>
                <label>機器管理費あり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>