force-app/main/default/objects/Quote__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>諸経費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>