force-app/main/default/objects/Quote__c/fields/external_file_url__c.field-meta.xml
<CustomField>
    <fullName>external_file_url__c</fullName>
    <label>外部ファイルURL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>