force-app/main/default/objects/Quote__c/fields/GeneralAdministrativeExpenses__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdministrativeExpenses__c</fullName>
    <defaultValue>IF ($RecordType.Name = &quot;施設&quot;, &quot;0&quot;, &quot;&quot;)</defaultValue>
    <label>一般管理費率</label>
    <length>18</length>
    <type>Text</type>
</CustomField>