force-app/main/default/objects/Quote__c/fields/GeneralAdministrativeExpensesPercent__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdministrativeExpensesPercent__c</fullName>
    <description>一般管理費（GeneralAdministrativeExpenses__c）の入力値を数値として保持するための項目</description>
    <formula>VALUE( GeneralAdministrativeExpenses__c )/100</formula>
    <label>一般管理費率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>