force-app/main/default/objects/Quote__c/fields/GrossWeight__c.field-meta.xml
<CustomField>
    <fullName>GrossWeight__c</fullName>
    <label>総重量</label>
    <summarizedField>Device__c.WeightSumFormula__c</summarizedField>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>