force-app/main/default/objects/Quote__c/fields/HousePowerGeneration_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>HousePowerGeneration_NET_Sub__c</fullName>
    <label>自家発NET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>