force-app/main/default/objects/Quote__c/fields/HousePowerGeneration_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>HousePowerGeneration_NETRate_Sub__c</fullName>
    <label>自家発NET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>