force-app/main/default/objects/Quote__c/fields/HousePowerGeneration_WC__c.field-meta.xml
<CustomField>
    <fullName>HousePowerGeneration_WC__c</fullName>
    <label>自家発WC</label>
    <summarizedField>Device__c.WcSumFormula__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.NETCalculateCategory__c</field>
        <operation>equals</operation>
        <value>自家発</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>