force-app/main/default/objects/Quote__c/fields/HousePowerGeneration_WC_currency__c.field-meta.xml
<CustomField>
    <fullName>HousePowerGeneration_WC_currency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>自家発WC</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>