force-app/main/default/objects/Quote__c/fields/Labor_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>Labor_NET_Sub__c</fullName>
    <label>労務NET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>