force-app/main/default/objects/Quote__c/fields/Labor_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>Labor_NETRate_Sub__c</fullName>
    <label>労務NET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>