force-app/main/default/objects/Quote__c/fields/Labor_WC__c.field-meta.xml
<CustomField>
    <fullName>Labor_WC__c</fullName>
    <label>労務WC</label>
    <summarizedField>Device__c.WcSumFormula__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.NETCalculateCategory__c</field>
        <operation>equals</operation>
        <value>労務</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>