force-app/main/default/objects/Quote__c/fields/MachineControlAmount_Reason__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount_Reason__c</fullName>
    <label>機器管理費手入力根拠</label>
    <length>100</length>
    <type>Text</type>
</CustomField>