force-app/main/default/objects/Quote__c/fields/MachineUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount__c</fullName>
    <label>機器単体費（見積項目集計）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>