force-app/main/default/objects/Quote__c/fields/MachineUnitAmount_ExceptSum__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_ExceptSum__c</fullName>
    <label>機器単体費対象外合計</label>
    <summarizedField>Device__c.ClientAnswerAmountTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.MajorClassification__c</field>
        <operation>notEqual</operation>
        <value>材料, 工事, システムインテグレーション費</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Device__c.EquipManageCostTarget__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Device__c.QuoteTarget__c</field>
        <operation>notEqual</operation>
        <value>見積対象外, 見積対象外(製作のみ), 支給品, 移設品</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>