force-app/main/default/objects/Quote__c/fields/MachineUnitAmount_ExceptSum_Rollup__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_ExceptSum_Rollup__c</fullName>
    <label>機器単体費対象外合計（工区積み上げ）</label>
    <summarizedField>ConstructionZone__c.MachineUnitAmount_ExceptSum__c</summarizedField>
    <summaryForeignKey>ConstructionZone__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>