force-app/main/default/objects/Quote__c/fields/MachineUnitAmount_formula__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_formula__c</fullName>
    <formula>IF( ISPICKVAL(SectionExistence__c , &quot;あり&quot;), MachineUnitAmount_OnlyTarget__c +  MachineUnitAmount_ExceptSum__c, MachineUnitAmount_OnlyTarget__c +  MachineUnitAmount_ExceptSum__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>機器単体費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>