force-app/main/default/objects/Quote__c/fields/MachineUnitAmount_OnlyTarget__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_OnlyTarget__c</fullName>
    <label>機器単体費(見積対象分のみ)</label>
    <summarizedField>Device__c.ClientAnswerAmountTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.MajorClassification__c</field>
        <operation>notEqual</operation>
        <value>材料, 工事, システムインテグレーション費</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Device__c.QuoteTarget__c</field>
        <operation>equals</operation>
        <value>見積対象, 見積対象(製作のみ)</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Device__c.EquipManageCostTarget__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>