force-app/main/default/objects/Quote__c/fields/MachineUnitAmount_RollUp__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmount_RollUp__c</fullName>
    <label>機器単体費(見積対象分のみ)</label>
    <summarizedField>ConstructionZone__c.MachineUnitAmount_OnlyTarget__c</summarizedField>
    <summaryForeignKey>ConstructionZone__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>