force-app/main/default/objects/Quote__c/fields/MachineUnitAmountExceptTarget__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmountExceptTarget__c</fullName>
    <formula>MachineUnitAmount_ExceptSum__c +  ExceptMachineControlTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>上記以外の金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>