force-app/main/default/objects/Quote__c/fields/MachineUnitAmountExceptTarget_Rollup__c.field-meta.xml
<CustomField>
    <fullName>MachineUnitAmountExceptTarget_Rollup__c</fullName>
    <label>上記以外の金額合計</label>
    <summarizedField>ConstructionZone__c.MachineUnitAmountExceptTarget__c</summarizedField>
    <summaryForeignKey>ConstructionZone__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>