force-app/main/default/objects/Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>明細の変圧器、コンデンサ、発電機は周波数により価格が異なるので、周波数の異なるエリアの案件をコピーする場合は注意してください</inlineHelpText>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>見積</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>