force-app/main/default/objects/Quote__c/fields/OutputSheetName__c.field-meta.xml
<CustomField>
    <fullName>OutputSheetName__c</fullName>
    <label>出力帳票名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>