force-app/main/default/objects/Quote__c/fields/PowerFrequency__c.field-meta.xml
<CustomField>
    <fullName>PowerFrequency__c</fullName>
    <label>電源周波数</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50Hz</fullName>
            </value>
            <value>
                <fullName>60Hz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>