force-app/main/default/objects/Quote__c/fields/QuoteContents__c.field-meta.xml
<CustomField>
    <fullName>QuoteContents__c</fullName>
    <label>見積内容</label>
    <length>100</length>
    <type>Text</type>
</CustomField>