force-app/main/default/objects/Quote__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <label>見積番号</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>