force-app/main/default/objects/Quote__c/fields/QuotePriceSum__c.field-meta.xml
<CustomField>
    <fullName>QuotePriceSum__c</fullName>
    <label>客先回答価格総合計</label>
    <summarizedField>Device__c.ClientAnswerAmountTotal__c</summarizedField>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>