force-app/main/default/objects/Quote__c/fields/QuoteSubmission__c.field-meta.xml
<CustomField>
    <fullName>QuoteSubmission__c</fullName>
    <inlineHelpText>提出先が複数の場合は改行して複数入力してください。</inlineHelpText>
    <label>見積提出先</label>
    <type>TextArea</type>
</CustomField>