force-app/main/default/objects/Quote__c/fields/RecordTypeIDOfDevice__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIDOfDevice__c</fullName>
    <label>見積項目レコードタイプID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>