force-app/main/default/objects/Quote__c/fields/SectionExistence__c.field-meta.xml
<CustomField>
    <fullName>SectionExistence__c</fullName>
    <label>工区有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
                <label>工区あり</label>
            </value>
            <value>
                <fullName>なし</fullName>
                <default>true</default>
                <label>工区なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>