force-app/main/default/objects/Quote__c/fields/SelfTotal_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>SelfTotal_NET_Sub__c</fullName>
    <inlineHelpText>コピー時には変更不可(コピー後の変更は可)</inlineHelpText>
    <label>手入力用全体NET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>