force-app/main/default/objects/Quote__c/fields/SharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SharePointURL__c</fullName>
    <defaultValue>&quot;https://mitsubishielectricgroup.sharepoint.com/sites/005138/ss08/Shared%20Documents/Forms/AllItems.aspx?viewpath=%2Fsites%2F005138%2Fss08%2FShared%20Documents%2FForms%2FAllItems%2Easpx&quot;</defaultValue>
    <inlineHelpText>見積参考資料の格納場所</inlineHelpText>
    <label>SharePointURL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>