force-app/main/default/objects/Quote__c/fields/suppliesMachineUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>suppliesMachineUnitAmount__c</fullName>
    <description>支給品や移設品、製作のみ(見積対象外も含む)の金額</description>
    <inlineHelpText>支給品や移設品、製作のみ(見積対象外も含む)の金額</inlineHelpText>
    <label>支給品&amp;移設品&amp;製作のみ機器単体費(見積項目集計)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>