force-app/main/default/objects/Quote__c/fields/SystemIntegrationFee__c.field-meta.xml
<CustomField>
    <fullName>SystemIntegrationFee__c</fullName>
    <label>システムインテグレーション費合計（見積項目合計）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>