force-app/main/default/objects/Quote__c/fields/SystemIntegrationFee_formula__c.field-meta.xml
<CustomField>
    <fullName>SystemIntegrationFee_formula__c</fullName>
    <formula>IF( ISPICKVAL(SectionExistence__c , &quot;あり&quot;),  SystemIntegrationFee_Rollup__c  ,  SystemIntegrationFee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>システムインテグレーション費合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>