force-app/main/default/objects/Quote__c/fields/SystemIntegrationFee_Rollup__c.field-meta.xml
<CustomField>
    <fullName>SystemIntegrationFee_Rollup__c</fullName>
    <label>システムインテグレーション費合計</label>
    <summarizedField>ConstructionZone__c.SystemIntegrationFee__c</summarizedField>
    <summaryForeignKey>ConstructionZone__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>