force-app/main/default/objects/Quote__c/fields/Target_MachineUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>Target_MachineUnitAmount__c</fullName>
    <description>支給品や移設品の価格は含めない金額（見積対象外含まない）</description>
    <inlineHelpText>支給品や移設品の価格は含めない金額（見積対象外含まない）</inlineHelpText>
    <label>見積対象機器単体費(見積項目集計)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>