force-app/main/default/objects/Quote__c/fields/temEquipManageCostRate__c.field-meta.xml
<CustomField>
    <fullName>temEquipManageCostRate__c</fullName>
    <label>補正前機器管理費率</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>